force-app/main/default/objects/Form_Field__c/Form_Field__c.object-meta.xml
<CustomObject>
    <label>Form Field</label>
    <nameField>
        <displayFormat>Data-{000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Form Fields</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>