force-app/main/default/objects/Form_Field__c/fields/Column_Matrix__c.field-meta.xml
<CustomField>
    <fullName>Column_Matrix__c</fullName>
    <label>Column_Matrix</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>