force-app/main/default/objects/Form_Field__c/fields/Columns__c.field-meta.xml
<CustomField>
    <fullName>Columns__c</fullName>
    <label>Columns</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>