force-app/main/default/objects/Form_Field__c/fields/css__c.field-meta.xml
<CustomField>
    <fullName>css__c</fullName>
    <label>css</label>
    <length>255</length>
    <type>Text</type>
</CustomField>