force-app/main/default/objects/Form_Field__c/fields/Data_Entry_Type__c.field-meta.xml
<CustomField>
    <fullName>Data_Entry_Type__c</fullName>
    <label>Data Entry Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>old</fullName>
            </value>
            <value>
                <fullName>Date</fullName>
            </value>
            <value>
                <fullName>Date/Time</fullName>
            </value>
            <value>
                <fullName>Text</fullName>
            </value>
            <value>
                <fullName>Text Area</fullName>
            </value>
            <value>
                <fullName>Text Area (Rich)</fullName>
            </value>
            <value>
                <fullName>Input</fullName>
            </value>
            <value>
                <fullName>Picklist</fullName>
            </value>
            <value>
                <fullName>Multipicklist</fullName>
            </value>
            <value>
                <fullName>Toggle</fullName>
            </value>
            <value>
                <fullName>Attachment</fullName>
            </value>
            <value>
                <fullName>Input :Text Area</fullName>
            </value>
            <value>
                <fullName>Multi checkbox Left</fullName>
            </value>
            <value>
                <fullName>Multi CheckBox</fullName>
            </value>
            <value>
                <fullName>checkbox Left</fullName>
            </value>
            <value>
                <fullName>Input Left</fullName>
            </value>
            <value>
                <fullName>checkbox</fullName>
                <label>Checkbox</label>
            </value>
            <value>
                <fullName>input:Date</fullName>
            </value>
            <value>
                <fullName>input:Time</fullName>
            </value>
            <value>
                <fullName>input:TextArea(Only)</fullName>
            </value>
            <value>
                <fullName>input:Text(Only)</fullName>
            </value>
            <value>
                <fullName>Line</fullName>
            </value>
            <value>
                <fullName>Button</fullName>
            </value>
            <value>
                <fullName>Picklist:Allergy</fullName>
            </value>
            <value>
                <fullName>Picklist:Medications</fullName>
            </value>
            <value>
                <fullName>Picklist:PhysicalTherapist</fullName>
            </value>
            <value>
                <fullName>Picklist:History</fullName>
            </value>
            <value>
                <fullName>Picklist:ProblemRating</fullName>
            </value>
            <value>
                <fullName>Picklist:Height</fullName>
            </value>
            <value>
                <fullName>Picklist:Weight</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>