force-app/main/default/objects/Form_Field__c/fields/DateTimevalue__c.field-meta.xml
<CustomField>
    <fullName>DateTimevalue__c</fullName>
    <label>DateTimevalue</label>
    <length>255</length>
    <type>Text</type>
</CustomField>