force-app/main/default/objects/Form_Field__c/fields/Datevalue__c.field-meta.xml
<CustomField>
    <fullName>Datevalue__c</fullName>
    <label>Datevalue</label>
    <length>255</length>
    <type>Text</type>
</CustomField>