force-app/main/default/objects/Form_Field__c/fields/Default_Text_Area__c.field-meta.xml
<CustomField>
    <fullName>Default_Text_Area__c</fullName>
    <label>Default Text Area</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>