force-app/main/default/objects/Form_Field__c/fields/Field_Name__c.field-meta.xml
<CustomField>
    <fullName>Field_Name__c</fullName>
    <label>Field Name</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>