force-app/main/default/objects/Form_Field__c/fields/Form_Field__c.field-meta.xml
<CustomField>
    <fullName>Form_Field__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Form Field</label>
    <referenceTo>Form_Field__c</referenceTo>
    <relationshipLabel>Form Fields</relationshipLabel>
    <relationshipName>Form_Fields</relationshipName>
    <type>Lookup</type>
</CustomField>