force-app/main/default/objects/Form_Field__c/fields/Maximum_Column_in_each_Section__c.field-meta.xml
<CustomField>
    <fullName>Maximum_Column_in_each_Section__c</fullName>
    <label>Maximum Column in each Section</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>