force-app/main/default/objects/Form_Field__c/fields/PalceHolder__c.field-meta.xml
<CustomField>
    <fullName>PalceHolder__c</fullName>
    <label>PalceHolder</label>
    <length>255</length>
    <type>Text</type>
</CustomField>