force-app/main/default/objects/Form_Field__c/fields/Row_Matrix__c.field-meta.xml
<CustomField>
    <fullName>Row_Matrix__c</fullName>
    <label>Row_Matrix</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>