force-app/main/default/objects/Form_Field__c/fields/Section__c.field-meta.xml
<CustomField>
    <fullName>Section__c</fullName>
    <label>Section</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>