force-app/main/default/objects/Form_Field__c/fields/style__c.field-meta.xml
<CustomField>
    <fullName>style__c</fullName>
    <label>style</label>
    <length>255</length>
    <type>Text</type>
</CustomField>