force-app/main/default/objects/Form_Field__c/fields/TextAreavalue__c.field-meta.xml
<CustomField>
    <fullName>TextAreavalue__c</fullName>
    <label>TextAreavalue</label>
    <type>TextArea</type>
</CustomField>