force-app/main/default/objects/Form_Field__c/fields/Textvalue__c.field-meta.xml
<CustomField>
    <fullName>Textvalue__c</fullName>
    <label>Textvalue</label>
    <length>255</length>
    <type>Text</type>
</CustomField>