force-app/main/default/objects/Form_Field__c/fields/value__c.field-meta.xml
<CustomField>
    <fullName>value__c</fullName>
    <defaultValue>false</defaultValue>
    <label>value</label>
    <type>Checkbox</type>
</CustomField>