force-app/main/default/objects/Form_Field__c/fields/width__c.field-meta.xml
<CustomField>
    <fullName>width__c</fullName>
    <label>width</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>