force-app/main/default/objects/Form_Field__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Column_Matrix__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <columns>css__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>